Update to java 20. Adapt change of java.lang.foreign